--- a/SpatialOS/planet_worker_config.json
+++ b/SpatialOS/planet_worker_config.json
@@ -1,6 +1,6 @@
 {
   "workerType": "PlanetWorker",
-  "layer": "greetings",
+  "layer": "planets",
   "entityInterest": {
     "rangeEntityInterest": {
       "radius": 2
