Go back to osx and update secret

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_STORE
 .idea/
+secrets.tar
 
 SpatialOS/.improbable
 SpatialOS/logs
@@ -11,6 +12,10 @@ SpatialOS/tools
 client/bin/
 client/lib/
 client/src/improbable/generated
+
+SnapshotGenerator/bin/
+SnapshotGenerator/lib/
+SnapshotGenerator/src/improbable/generated
 
 PlanetWorker/bin/
 PlanetWorker/lib/
