--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 os: osx
+ruby:
+  - 2.3.7
 env:
   global:
     - HOMEBREW_FOLDER=$HOME/Library/Caches/Homebrew
@@ -19,6 +21,7 @@ before_install:
   - chmod a+x ./ci/build.sh
   - chmod a+x ./ci/test_local.sh
   - chmod a+x ./ci/deploy.sh
+  - rvm --default use 2.3.7
 install:
   - "./ci/install.sh"
 before_script:
@@ -29,4 +32,4 @@ script:
   - if [ $TRAVIS_TEST_RESULT -eq 0 ]; then ./ci/test_local.sh; fi
   - if [ $TRAVIS_TEST_RESULT -eq 0 ]; then ./ci/deploy.sh; fi
 after_script:
-  - curl --upload-file $(ls -t $TRAVIS_BUILD_DIR/SpatialOS/logs/spatial_* | head -n 1) https://transfer.sh/spatial_$TRAVIS_BUILD_NUMBER.log
+  - curl --upload-file $(ls -t $TRAVIS_BUILD_DIR/SpatialOS/logs/spatial_* | head -n 1) "https://transfer.sh/spatial_$TRAVIS_BUILD_NUMBER.log"
