--- a/SnapshotGenerator/src/CsharpWorker.csproj
+++ b/SnapshotGenerator/src/CsharpWorker.csproj
@@ -23,7 +23,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
-    <Compile Include="Client.cs" />
+    <Compile Include="SnapshotGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\lib\improbable\sdk\13.5.1\linux64\libCoreSdkDll.so">
