Refactor/folder structure (#2)
* Refactor folder structure

* Move snapshot folder

* Set os to osx

* Revert travis to objective-c

* Go back to osx and update secret

* Update helper function

* Default ruby global to 2.3.7

* More refactoring

* Add SnapshotGenerator to workers

* Remove rvm usage, let brew figure it out

* Add rvm again

* Rvm doesn't do anything with brew

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ client/bin/
 client/lib/
 client/src/improbable/generated
 
+SnapshotGenerator/bin/
+SnapshotGenerator/lib/
+SnapshotGenerator/src/improbable/generated
+
 PlanetWorker/bin/
 PlanetWorker/lib/
 PlanetWorker/src/improbable/generated
