--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: objective-c
+os: osx
 env:
   global:
     - HOMEBREW_FOLDER=$HOME/Library/Caches/Homebrew
@@ -13,20 +13,20 @@ notifications:
   email:
     - andrea@improbable.io
 before_install:
-  - chmod a+x ./scripts/secret.sh
-  - chmod a+x ./scripts/install.sh
-  - chmod a+x ./scripts/tear_down.sh
-  - chmod a+x ./scripts/build.sh
-  - chmod a+x ./scripts/test_local.sh
-  - chmod a+x ./scripts/deploy.sh
+  - chmod a+x ./ci/secret.sh
+  - chmod a+x ./ci/install.sh
+  - chmod a+x ./ci/tear_down.sh
+  - chmod a+x ./ci/build.sh
+  - chmod a+x ./ci/test_local.sh
+  - chmod a+x ./ci/deploy.sh
 install:
-  - "./scripts/install.sh"
+  - "./ci/install.sh"
 before_script:
-  - "./scripts/secret.sh"
-  - "./scripts/tear_down.sh"
+  - "./ci/secret.sh"
+  - "./ci/tear_down.sh"
 script:
-  - "./scripts/build.sh"
-  - if [ $TRAVIS_TEST_RESULT -eq 0 ]; then ./scripts/test_local.sh; fi
-  - if [ $TRAVIS_TEST_RESULT -eq 0 ]; then ./scripts/deploy.sh; fi
+  - "./ci/build.sh"
+  - if [ $TRAVIS_TEST_RESULT -eq 0 ]; then ./ci/test_local.sh; fi
+  - if [ $TRAVIS_TEST_RESULT -eq 0 ]; then ./ci/deploy.sh; fi
 after_script:
-  - curl --upload-file $TRAVIS_BUILD_DIR/logs/spatial.log https://transfer.sh/spatial_$TRAVIS_BUILD_NUMBER.log
+  - curl --upload-file $(ls -t $TRAVIS_BUILD_DIR/SpatialOS/logs/spatial_* | head -n 1) "https://transfer.sh/spatial_$TRAVIS_BUILD_NUMBER.log"
