--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,15 @@ SpatialOS/tools
 
 client/bin/
 client/lib/
+client/src/obj/
 client/src/improbable/generated
 
 SnapshotGenerator/bin/
 SnapshotGenerator/lib/
+SnapshotGenerator/src/obj/
 SnapshotGenerator/src/improbable/generated
 
 PlanetWorker/bin/
 PlanetWorker/lib/
+PlanetWorker/src/obj/
 PlanetWorker/src/improbable/generated
