--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - chmod a+x ./ci/tear_down.sh
   - chmod a+x ./ci/build.sh
   - chmod a+x ./ci/test_local.sh
-  - chmod a+x ./ci/deploy.sh
+  - chmod a+x ./ci/test_cloud.sh
 install:
   - "./ci/install.sh"
 before_script:
@@ -27,6 +27,6 @@ before_script:
 script:
   - "./ci/build.sh"
   - if [ $TRAVIS_TEST_RESULT -eq 0 ]; then ./ci/test_local.sh; fi
-  - if [ $TRAVIS_TEST_RESULT -eq 0 ]; then ./ci/deploy.sh; fi
+  - if [ $TRAVIS_TEST_RESULT -eq 0 ]; then ./ci/test_cloud.sh; fi
 after_script:
   - curl --upload-file $(ls -t $TRAVIS_BUILD_DIR/SpatialOS/logs/spatial_* | head -n 1) "https://transfer.sh/spatial_$TRAVIS_BUILD_NUMBER.log"
