Add PlatformSDK to generate service accounts

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ SnapshotGenerator/src/improbable/generated
 PlanetWorker/bin/
 PlanetWorker/lib/
 PlanetWorker/src/improbable/generated
+
+PlatformSDK/**/bin
+PlatformSDK/**/obj
