Fail when no dotnet-sdk

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ cache:
   timeout: 3600
   directories:
     - $HOME/Library/Caches/Homebrew
+addons:
+  homebrew:
+    update: true
 notifications:
   email:
     - andrea@improbable.io
