--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ env:
     - DEPLOYMENT_NAME=spacegame
     - DEPLOYMENT_TTL=ttl_1_hours
     - ASSEMBLY_NAME=spacegame_$TRAVIS_JOB_NUMBER
+    - HOMEBREW_FORCE_VENDOR_RUBY=1
 cache:
   timeout: 3600
   directories:
@@ -16,7 +17,7 @@ notifications:
     - andrea@improbable.io
 before_cache:
   - brew cleanup
-before_install:
+before_install:  
   - chmod a+x ./ci/deploy_secret.sh
   - chmod a+x ./ci/install.sh
   - chmod a+x ./ci/tear_down.sh
