Set HOMEBREW_RUBY_PATH

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 os: osx
-rvm:
-  - 2.3.7
 env:
   global:
     - DEPLOYMENT_NAME=spacegame
@@ -8,6 +6,7 @@ env:
     - ASSEMBLY_NAME=spacegame_$TRAVIS_JOB_NUMBER
     - HOMEBREW_FORCE_VENDOR_RUBY=0
     - HOMEBREW_NO_AUTO_UPDATE=1
+    - HOMEBREW_RUBY_PATH="$(which ruby)"
 cache:
   timeout: 3600
   directories:
