Fakelink to rvm ruby 2.3..7

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 os: osx
+rvm:
+  - 2.3.7
 env:
   global:
     - DEPLOYMENT_NAME=spacegame
@@ -8,7 +10,6 @@ cache:
   timeout: 3600
   directories:
     - $HOME/Library/Caches/Homebrew
-    - /usr/local/Homebrew/Library/Homebrew/vendor/portable-ruby/2.3.7
 notifications:
   email:
     - andrea@improbable.io
