Try with HOMEBREW_DEVELOPER=1

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ env:
     - DEPLOYMENT_NAME=spacegame
     - DEPLOYMENT_TTL=ttl_1_hours
     - ASSEMBLY_NAME=spacegame_$TRAVIS_JOB_NUMBER
+    - HOMEBREW_DEVELOPER=1
+    - HOMEBREW_RUBY_PATH=$(which ruby)
 cache:
   timeout: 3600
   directories:
@@ -31,3 +33,9 @@ script:
   - if [ $TRAVIS_TEST_RESULT -eq 0 ]; then ./ci/test_cloud.sh; fi
 before_cache:
   - brew cleanup
+  
+  
+if [[ -z "$HOMEBREW_DEVELOPER" ]]
+then
+  echo "Hello"
+fi
