--- a/client/src/CsharpWorker.csproj
+++ b/client/src/CsharpWorker.csproj
@@ -24,6 +24,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
     <Compile Include="Client.cs" />
+    <Compile Include="ProgressBar.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\lib\improbable\sdk\13.5.1\linux64\libCoreSdkDll.so">
