--- a/client/client_worker_config.json
+++ b/client/client_worker_config.json
@@ -1,5 +1,5 @@
 {
-  "workerType": "InteractiveClient",
+  "workerType": "LauncherClient",
   "layer": "client",
   "entityInterest": {
     "rangeEntityInterest": {
