--- a/client/src/CsharpWorker.csproj
+++ b/client/src/CsharpWorker.csproj
@@ -43,6 +43,18 @@
       <Link>CoreSdkDll.lib</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="improbable_client_launch_config.json">
+      <Link>improbable_client_launch_config.json</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="run_remote.sh">
+      <Link>run_remote.sh</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="run_game.sh">
+      <Link>run_game.sh</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include=".\improbable\generated\**\*.cs" />
